--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8083
+
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://springbootschoolservice.cs2t22alvdcj.ap-northeast-2.rds.amazonaws.com:3306/SchoolServer?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
