--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8083
 
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://springbootschoolservice.cs2t22alvdcj.ap-northeast-2.rds.amazonaws.com:3306/SchoolServer?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=admin
@@ -9,3 +7,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+#??? ???? ?? ??? ????
+#logging.level.org.springframework.security.authentication=DEBUG
